@@ -162,9 +162,10 @@ NULL
 #'
 #' \newcommand{\sadists}{\href{https://github.com/shabbychef/sadists}}
 #'
-#' @section \sadists{} Version 0.2.2 (2015-08-25) :
+#' @section \sadists{} Version 0.2.2 (2016-03-03) :
 #' \itemize{
-#' \item work around bad \code{rchisq} when \eqn{df=0=ncp}
+#' \item work around bad \code{rchisq} when \eqn{df=0=ncp} (?)
+#' \item Incompatibilities in vignette with ggplot2 release.
 #' }
 #'
 #' @section \sadists{} Version 0.2.1 (2015-06-12) :
